--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,13 @@ typings/
 
 # next.js build output
 .next
+
+# Keys
+example_keys/
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
